--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
                 <li><a href="#">Header line three</a></li>
             </ul>
         </div>
-        <div class="tag-line">
-            <div class="intro">This website is awesome</div>
-            <div class="intro-full">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <div class="sign-up-button">Sign up</div>
+        <div class="lower-header">
+            <div class="tag-line">
+                <div class="intro">This website is awesome</div>
+                <div class="intro-full">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is lower contrast.</div>
+                <button class="sign-up-button">Sign up</button>
+            </div>
+            <div class="image-holder">
+                
+            </div>
         </div>
     </div>
     <div class="section-two">
@@ -38,7 +44,8 @@
         </ul>
     </div>
     <div class="section-three">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
         <div class="quote-author">-Thor, God of Thunder</div>
     </div>
     <div class="signup-banner">
