--- a/index.html
+++ b/index.html
@@ -24,36 +24,43 @@
                 <button class="sign-up-button">Sign up</button>
             </div>
             <div class="image-holder">
-                
             </div>
         </div>
     </div>
+
+    <div class="title-two">Some random information.</div>
     <div class="section-two">
-        <div class="title-two">Some random information.</div>
         <ul class="small-image">
-            <li><img></li>
-            <li><img></li>
-            <li><img></li>
-            <li><img></li>
+            <li><img class="stamp"></li>
+            <li><img class="stamp"></li>
+            <li><img class="stamp"></li>
+            <li><img class="stamp"></li>
         </ul>
         <ul class="image-text">
-            <div>This is some subtext under an illustration or image</div>
-            <div>This is some subtext under an illustration or image</div>
-            <div>This is some subtext under an illustration or image</div>
-            <div>This is some subtext under an illustration or image</div>
+            <div class="annotations">This is some subtext under an illustration or image</div>
+            <div class="annotations">This is some subtext under an illustration or image</div>
+            <div class="annotations">This is some subtext under an illustration or image</div>
+            <div class="annotations">This is some subtext under an illustration or image</div>
         </ul>
     </div>
-    <div class="section-three">
+
+    <div class="quote-section">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
             space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
         <div class="quote-author">-Thor, God of Thunder</div>
     </div>
-    <div class="signup-banner">
-        <div class="action-call">Call to action! It's time!</div>
-        <div class="action-line">Sign up for our product byt clicking that button right over there!</div>
-        <div class="bottom-sign-up-button">Sign up</div>
+    <div class="section-three">
+        <div class="signup-banner">
+            <div class="signup-text">
+                <div class="action-call">Call to action! It's time!</div>
+                <div class="action-line">Sign up for our product byt clicking that button right over there!</div>
+            </div>
+            <button class="bottom-sign-up-button">Sign up</button>
+        </div>
     </div>
+
     <div class="footer">
         <div class="disclaimer">Copyright The Odin Project 2021</div>
     </div>
+
 </body>
